# Sokoban

./: .gitignore  CMakeLists.txt  README.md  map.txt
include/: my_sokoban.h
src/: check_map.c  color.c  key.c  key_down.c  key_left.c  key_right.c  key_space.c  key_up.c  main.c  my_str_to_wordtab.c  take_map.c
